Infrastructure/ingress/proxy-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana-proxy
  namespace: app
spec:
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: 3000
  selector:
    app: grafana

    # Не использовал этот файл
