Infrastructure/ingress/ingress-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k8s-ingress
  namespace: app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-service
            port:
              number: 80
      - path: /atlantis(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: atlantis
            port:
              number: 80
      # - path: /argocd(/|$)(.*)
      #   pathType: ImplementationSpecific
      #   backend:
      #     service:
      #       name: argocd-server
      #       port:
      #         number: 80
      - path: /grafana(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: grafana-proxy
            port:
              number: 3000
